gateone.js:  Fixed a couple of bugs related to the new code that uses localStorage for storing session information (instead of a cookie). gateone.js:  When in embedded mode if you neglect to set GateOne.Terminal.termSelectCallback it will call logWarning() with a helpful description about why this can result in shooting yourself in the foot. Playback plugin:  Playback controls are no longer omitted if in embedded mode.  I am making this change under the assumption that if someone wanted to avoid having playback controls they'd simply remove the Playback plugin. CSS Themes:  Tweaked the pastearea so it takes up less space.  This was necessary to prevent it from overlapping the playback bar with smaller terminals. hello_embedded:  Loads of changes and additions to the "DIY" section.  It works well now!  Stay tuned because more is on the way.

--- a/gateone/templates/themes/white.css
+++ b/gateone/templates/themes/white.css
@@ -298,7 +298,7 @@ hr {
     margin: 0;
     opacity: 0;
     width: 96%; /* For whatever reason Firefox needs the width/height set */
-    height: 97%;
+    height: 95%;
 }
 /* This is to work around a Chrome/Windows bug where pasting gets disabled if you use JS to set display: none */
 #{{container}} .go_none { /* No prefix on this one because of issues with that in the JS code */
